--- a/public/style.css
+++ b/public/style.css
@@ -117,6 +117,19 @@ h1 {
     background-color: #e3ad2c;
 }
 
+.win {
+    display: none;
+    justify-content: center;
+    align-items: center;
+    border-radius: 30px;
+    position: absolute;
+    top: 100px;
+    left: 40%;
+    background-color: #daef21;
+    width: 300px;
+    height: 150px;
+}
+
 
 @media (max-width: 600px) {
     html {
