--- a/src/pages/first/FindCards.css
+++ b/src/pages/first/FindCards.css
@@ -90,3 +90,20 @@ body {
     font-size: 20px;
     font-weight: bold;
 }
+
+.win {
+    display: none;
+    justify-content: center;
+    align-items: center;
+    border-radius: 30px;
+    position: absolute;
+    top: 100px;
+    left: 40%;
+    background-color: #daef21;
+    width: 300px;
+    height: 150px;
+}
+
+.win h1 {
+    padding: 0;
+}
