--- a/public/style.css
+++ b/public/style.css
@@ -117,6 +117,11 @@ h1 {
     background-color: #e3ad2c;
 }
 
+.iframe {
+    width: 100%;
+    height: 500px;
+}
+
 .win {
     display: none;
     justify-content: center;
